# emscripten

./: .clangd  .gitignore  .mcvm  emcc.py  pnpm-lock.yaml  toolchain_profiler.results_20241114_0138.html
cmake/Modules/Platform/: Emscripten.cmake
mcvm/: .clangd  CMakeLists.txt  Emscripten.cmake  cxa_exception_emscripten.cpp  mcvm_syslibs.py  runner.js  system_libs.py  tsconfig.json  update_libc.py  update_libcxx.py  update_libcxxabi.py  update_libunwind.py
mcvm/src/: main.cpp
mcvm/system/lib/libcxxabi/src/: cxa_exception.cpp  cxa_exception_js_utils.cpp  cxa_personality.cpp
src/: library_atomic.js
src/embind/: embind.js  embind_gen.js
src/lib/: libatomic.js
system/lib/: update_libc.py  update_libcxx.py  update_libcxxabi.py
system/lib/libcxx/: __config_site
system/lib/libcxx/include/: module.modulemap  typeinfo
system/lib/libcxx/include/experimental/: meta
system/lib/libcxx/src/support/runtime/: exception_fallback.ipp
system/lib/libcxxabi/src/: cxa_exception.cpp  private_typeinfo.cpp
test/code_size/: test_codesize_cxx_lto.json  test_codesize_hello_dylink_all.json
tools/: building.py  emscripten.py  system_libs.py
ts/: .mcvm  CMakeLists.txt  update_libc.py
